--- a/w3Homework/w3.html
+++ b/w3Homework/w3.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>vegetable</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 
 <body>
@@ -13,10 +13,10 @@
             <div class="right">
                 <div class="icon">
                     <a href="">
-                        <img src="btn_facebook.png">
+                        <img src="image/btn_facebook.png">
                     </a>
                     <a href="">
-                        <img src="btn_instagram.png">
+                        <img src="image/btn_instagram.png">
                     </a>
                 </div>
                 <div class="btncontainer">
@@ -35,7 +35,7 @@
             </ul>
         </nav>
         <div class="main-image">
-            <img src="img_main_pumpkin.png">
+            <img src="image/img_main_pumpkin.png">
         </div>
         <div class="text-container">
             <div class="miner-image">
@@ -43,10 +43,10 @@
                     <h2>Vegetables</h2>
                     <div class="figure">
                         <div id="img">
-                            <img src="img_vegetables_pepper.png">
-                            <img src="img_vegetables_carrot.png">
+                            <img src="image/img_vegetables_pepper.png">
+                            <img src="image/img_vegetables_carrot.png">
                         </div>
-                        <img src="img_vegetables_corn.png">
+                        <img src="image/img_vegetables_corn.png">
                     </div>
                 </div>
             </div>
